# ofdm_allocator

gr-ofdm_allocator/: CMakeLists.txt  MANIFEST.md
gr-ofdm_allocator/cmake/Modules/: ofdm_allocatorConfig.cmake
gr-ofdm_allocator/docs/: README.ofdm_allocator
gr-ofdm_allocator/docs/doxygen/: Doxyfile.in
gr-ofdm_allocator/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-ofdm_allocator/examples/: rx_ofdm.py  rx_ofdm_alix.grc  tx_ofdm.py  tx_ofdm_alice.grc  tx_ofdm_alix.grc
gr-ofdm_allocator/examples/project_GNURADIO/: rx_ofdm.py  rx_ofdm_alix.grc  tx_ofdm.py  tx_ofdm_alix.grc
gr-ofdm_allocator/grc/: CMakeLists.txt  ofdm_allocator_allocator_subcarrier.xml  ofdm_allocator_constellation_alix.xml  ofdm_allocator_constellation_decoder_alix.xml  ofdm_allocator_crc_alix.xml  ofdm_allocator_frame_equalizer_alix.xml  ofdm_allocator_metric_type_alix.xml  ofdm_allocator_ofdm_equalizer_base_alix.xml  ofdm_allocator_ofdm_equalizer_simpledfe_alix.xml  ofdm_allocator_ofdm_tx.xml  ofdm_allocator_packet_header_default_alix.xml  ofdm_allocator_packet_header_gen.xml  ofdm_allocator_packet_header_ofdm_alix.xml  ofdm_allocator_packet_header_parser_alix.xml  ofdm_allocator_per_measure.xml  ofdm_allocator_per_measure_decimator.xml  ofdm_allocator_pkt_err_measure.xml  ofdm_allocator_serializer_subcarrier.xml  ofdm_allocator_vector_source_tagged.xml
gr-ofdm_allocator/include/ofdm_allocator/: CMakeLists.txt  allocator_subcarrier.h  api.h  constellation_alix.h  constellation_decoder_alix.h  crc_alix.h  frame_equalizer_alix.h  metric_type_alix.h  ofdm_equalizer_base_alix.h  ofdm_equalizer_simpledfe_alix.h  packet_header_default_alix.h  packet_header_gen.h  packet_header_ofdm_alix.h  packet_header_parser_alix.h  per_measure.h  per_measure_decimator.h  pkt_err_measure.h  serializer_subcarrier.h  vector_source_tagged.h
gr-ofdm_allocator/lib/: .frame_equalizer_alix_impl.cc.swp  .vector_source_tagged_impl.cc.swp  CMakeLists.txt  allocator_subcarrier_impl.cc  allocator_subcarrier_impl.h  constellation_alix.cc  constellation_decoder_alix_impl.cc  constellation_decoder_alix_impl.h  crc_alix_impl.cc  crc_alix_impl.h  frame_equalizer_alix_impl.cc  frame_equalizer_alix_impl.h  ofdm_equalizer_base_alix.cc  ofdm_equalizer_simpledfe_alix.cc  packet_header_default_alix.cc  packet_header_gen_impl.cc  packet_header_gen_impl.h  packet_header_ofdm_alix.cc  packet_header_parser_alix_impl.cc  packet_header_parser_alix_impl.h  per_measure_decimator_impl.cc  per_measure_decimator_impl.h  per_measure_impl.cc  per_measure_impl.h  pkt_err_measure_impl.cc  pkt_err_measure_impl.h  qa_ofdm_allocator.cc  qa_ofdm_allocator.h  serializer_subcarrier_impl.cc  serializer_subcarrier_impl.h  test_ofdm_allocator.cc  vector_source_tagged_impl.cc  vector_source_tagged_impl.h
gr-ofdm_allocator/python/: CMakeLists.txt  __init__.py  ofdm_tx.py
gr-ofdm_allocator/swig/: CMakeLists.txt  ofdm_allocator_swig.i
